Removed overflow: hidden from .container to fix smaller displays

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-size: 24px;
+    font-size: 20px;
     color: white;
 }
 
@@ -13,7 +13,7 @@ body {
     max-width: 90%;
     padding: 0 1.5rem;
     margin: auto;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .scene{
